# powerdoc

./: create_project.sh
doc-power-production/: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PACKAGE_MANIFEST.md  README.md  cleanup_state.sh  docker-compose.yml  fix_eks_issues.sh  fix_iam_attachments.sh  populate_terraform.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  terraform.env
doc-power-production/docs/: ARCHITECTURE.md
doc-power-production/infrastructure/jenkins/: Jenkinsfile
doc-power-production/infrastructure/kubernetes/base/: configmap.yaml  namespace.yaml  secrets.yaml
doc-power-production/infrastructure/terraform/: .gitignore  README.md  backend.tf  fixed_terraform_setup_script.sh  main.tf  main.tf.backup.20251107_012615  outputs.tf  variables.tf
doc-power-production/infrastructure/terraform/infrastructure/terraform/: README.md  main.tf  outputs.tf  prod.tfvars
doc-power-production/infrastructure/terraform/infrastructure/terraform/modules/eks/: main.tf  outputs.tf
doc-power-production/infrastructure/terraform/modules/eks/: main.tf  main.tf.backup.20251107_012615  variables.tf
doc-power-production/microservices/api-gateway/: Dockerfile
doc-power-production/microservices/document-service/: requirements.txt
doc-power-production/microservices/document-service/src/: main.py
doc-power-production/microservices/workflow-service/src/: config.py
doc-power-production/tests/: conftest.py
(+2 files in other folders)
